// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | TabsNav Integration: With react-router 1`] = `
.c10 {
  padding-top: 16px;
  padding-bottom: 16px;
}

.c1 {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > *:not(:first-child) {
  margin-top: 0;
  margin-left: 16px;
}

.c3 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c9 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c6 {
  height: 44px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: -1px;
  left: 0;
}

.c8 {
  height: 44px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: inherit;
}

@media (min-width:768px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }

  .c2 > *:not(:first-child) {
    margin-top: 0;
    margin-left: 32px;
  }
}

@media (min-width:360px) {
  .c7 {
    font-size: 16px;
    line-height: 1.5;
  }
}

@media (min-width:360px) {
  .c4 {
    font-size: 16px;
    line-height: 1.5;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <ul
      className="c2 c3"
    >
      <li
        className="c1"
      >
        <span
          className="c4"
          type="primary"
        >
          <a
            aria-current="page"
            className="c5"
            href="#/route1"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <span
              className="c6"
              height={11}
            >
              Link to /route1
            </span>
          </a>
        </span>
      </li>
      <li
        className="c1"
      >
        <span
          className="c7"
          type="primary"
        >
          <a
            aria-current={false}
            className="c5"
            href="#/route2"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <span
              className="c8"
              height={11}
            >
              <div>
                Link to /route2
              </div>
            </span>
          </a>
        </span>
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <div
      className="c9"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c10"
    >
      /route1 content
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | TabsNav Integration: With react-router and height modified 1`] = `
.c10 {
  padding-top: 16px;
  padding-bottom: 16px;
}

.c1 {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > *:not(:first-child) {
  margin-top: 0;
  margin-left: 16px;
}

.c3 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c9 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c6 {
  height: 48px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: -1px;
  left: 0;
}

.c8 {
  height: 48px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: inherit;
}

@media (min-width:768px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }

  .c2 > *:not(:first-child) {
    margin-top: 0;
    margin-left: 32px;
  }
}

@media (min-width:360px) {
  .c7 {
    font-size: 16px;
    line-height: 1.5;
  }
}

@media (min-width:360px) {
  .c4 {
    font-size: 16px;
    line-height: 1.5;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <ul
      className="c2 c3"
    >
      <li
        className="c1"
      >
        <span
          className="c4"
          type="primary"
        >
          <a
            aria-current="page"
            className="c5"
            href="#/route1"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <span
              className="c6"
              height={12}
            >
              Link to /route1
            </span>
          </a>
        </span>
      </li>
      <li
        className="c1"
      >
        <span
          className="c7"
          type="primary"
        >
          <a
            aria-current={false}
            className="c5"
            href="#/route2"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <span
              className="c8"
              height={12}
            >
              <div>
                Link to /route2
              </div>
            </span>
          </a>
        </span>
      </li>
    </ul>
  </div>
  <div
    className="c1"
  >
    <div
      className="c9"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c10"
    >
      /route1 content
    </div>
  </div>
</div>
`;
